# serializer version: 1
# name: test_core_3x1treino_seed17
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'V-Up',
            'Prancha Slideboard',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Canoinha',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'core(3)',
    }),
  ])
# ---
# name: test_costas_4x1treino_seed9
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Barra Fixa',
            'Remada Baixa Neutra',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Remada Aberta Trx',
            'Puxada Aberta',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'costas(4)',
    }),
  ])
# ---
# name: test_full_body_4treinos_seed1
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Adução Polia',
          'familia': 'Adução quadril',
          'tipo': 'familia_repetida',
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'abduction',
          'escopo_demanda': 'abduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 2,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra Sumô',
            'Puxada Supinada',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Remada Curvada Barra',
            'Adução Polia',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Passada Dos Steps',
            'Dead Bug C/ Bola',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Apoio Ajoelhado',
            'Side Clams',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Desenv. Halteres Uni.',
          ]),
        }),
      ]),
      'relaxados': list([
        'Adução Polia',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Desenvolvimento Smith',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Barra',
            'Stiff Uni. Smith',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Barra Isométrica',
            'Desloc. Lateral c/ Band',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Remada Aberta Trx',
            'Slide Board Lateral',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenvolvimento Smith',
            'Copenhagen Adduction',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Pallof Press',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenvolvimento Smith',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'exercicio': 'Desenv. Halteres Sentado',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Puxada Aberta',
          'familia': 'Puxada',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Supino Com Anilha',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hip Thrust',
            'Supino Com Anilha',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Remada Baixa Neutra',
            'Leg Press',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Puxada Aberta',
            'Prancha Lateral',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenv. Halteres Sentado',
        'Puxada Aberta',
        'Supino Com Anilha',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_bilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'abduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Abdução Polia',
            'Abdução quadril',
            'Desloc. Lateral c/ Band',
            'Side Clams',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'exercicio': 'Supino Com Halteres',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Desenvolvimento Barra',
            'Step Up',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Serrote',
            'Hollow Hold',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Supino Com Halteres',
            'Ponte Alternada',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Pullover Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
        'Supino Com Halteres',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
  ])
# ---
# name: test_full_body_4treinos_seed1_HIB2
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Adução Polia',
          'familia': 'Adução quadril',
          'tipo': 'familia_repetida',
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'abduction',
          'escopo_demanda': 'abduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 2,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra Sumô',
            'Puxada Supinada',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Remada Curvada Barra',
            'Adução Polia',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Passada Dos Steps',
            'Dead Bug C/ Bola',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Apoio Ajoelhado',
            'Side Clams',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Desenv. Halteres Uni.',
          ]),
        }),
      ]),
      'relaxados': list([
        'Adução Polia',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Desenvolvimento Smith',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Barra',
            'Stiff Uni. Smith',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Barra Isométrica',
            'Desloc. Lateral c/ Band',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Remada Aberta Trx',
            'Slide Board Lateral',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenvolvimento Smith',
            'Copenhagen Adduction',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Pallof Press',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenvolvimento Smith',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'exercicio': 'Desenv. Halteres Sentado',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Puxada Aberta',
          'familia': 'Puxada',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Supino Com Anilha',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hip Thrust',
            'Supino Com Anilha',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Remada Baixa Neutra',
            'Leg Press',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Puxada Aberta',
            'Prancha Lateral',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenv. Halteres Sentado',
        'Puxada Aberta',
        'Supino Com Anilha',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_bilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'abduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Abdução Polia',
            'Abdução quadril',
            'Desloc. Lateral c/ Band',
            'Side Clams',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'exercicio': 'Supino Com Halteres',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Desenvolvimento Barra',
            'Step Up',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Serrote',
            'Hollow Hold',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Supino Com Halteres',
            'Ponte Alternada',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Pullover Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
        'Supino Com Halteres',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
  ])
# ---
# name: test_hinge_2_squat_unilateral_2_seed19
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Recuo C/ Barra',
            'Stiff Uni. Smith',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Slide Board Lateral',
            'Ponte',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'hinge(2) + squat(2)',
    }),
  ])
# ---
# name: test_max_complexidade_baixa_seed29
  list([
    dict({
      'avisos': list([
        dict({
          'chave': 'puxadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 0,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Desenv. Landmine',
            'Apoio Ajoelhado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Remada Baixa Neutra',
            'Crossover Sentado',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(4)',
    }),
  ])
# ---
# name: test_peito_3x2treinos_seed13
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Apoio Ajoelhado',
          'familia': 'Apoio',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Supino Smith Inclinado',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Smith Inclinado',
            'Apoio Ajoelhado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Apoio Elevado',
          ]),
        }),
      ]),
      'relaxados': list([
        'Apoio Ajoelhado',
        'Supino Smith Inclinado',
      ]),
      'tipo': 'peito(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Halteres',
            'Crucifixo Halteres',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Crossover',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'peito(3)',
    }),
  ])
# ---
# name: test_perna_anterior_3x3treinos_seed3
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Agachamento Goblet',
          'familia': 'Agachamento',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Step Up Alt.',
            'Box Jump',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Agachamento Goblet',
          ]),
        }),
      ]),
      'relaxados': list([
        'Agachamento Goblet',
      ]),
      'tipo': 'perna_anterior(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Leg Press',
            'Walking Lunges',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Agach. Lateral',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Livre',
            'Cadeira Extensora',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Recuo C/ Barra',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
  ])
# ---
# name: test_perna_posterior_2x2treinos_seed5
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Side Clams',
            'Hip Thrust Uni.',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_posterior(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Flexão Joelhos Feijão',
            'Ponte C/ Band',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_posterior(2)',
    }),
  ])
# ---
# name: test_template_empurrar_puxar_seed7
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Desenvolvimento Barra',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Apoio',
          'familia': 'Apoio',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Anilha',
            'Lev. Terra Anilha',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Apoio',
            'Flexão Joelhos Feijão',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Barra',
            'Prancha Slideboard',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenvolvimento Smith',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Crossover',
            'Hollow Hold',
          ]),
        }),
        dict({
          'label': 'F',
          'nomes': list([
            'Hip Thrust C/ Band',
            'Tríceps Coice Polia',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenvolvimento Barra',
        'Apoio',
      ]),
      'tipo': 'empurrar_compostos(2) + empurrar_isolados(1) + ombro_composto(2) + hinge(2) + knee_flexion(1) + abduction(1) + core_isometrico(2) + triceps(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Desenv. Halteres Sentado',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Apoio Elevado',
          'familia': 'Apoio',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Stiff Barra Livre',
            'Apoio Elevado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Pallof Press',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Apoio Ajoelhado',
            'Ponte Unilateral',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Halteres Uni.',
            'Side Clams',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Crucifixo Halteres',
            'Dead Bug',
          ]),
        }),
        dict({
          'label': 'F',
          'nomes': list([
            'Tríceps Mergulho Banco',
            'Cadeira Flexora',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenv. Halteres Sentado',
        'Apoio Elevado',
      ]),
      'tipo': 'empurrar_compostos(2) + empurrar_isolados(1) + ombro_composto(2) + hinge(2) + knee_flexion(1) + abduction(1) + core_isometrico(2) + triceps(1)',
    }),
  ])
# ---
# name: test_triceps_2_filtro_familia_relax_seed23
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Tríceps Mergulho Banco',
            'Tríceps Coice Polia',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'triceps(2)',
    }),
  ])
# ---
# name: test_upper_3_lower_2_core_2_3treinos_seed42
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Barra Fixa',
            'V-Up Unilateral',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Serrote',
            'Dead Bug',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Remada Neutra Trx',
            'Ponte C/ Band',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Agachamento Goblet',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Supino Com Anilha',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Apoio',
            'Lev. Terra Anilha',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Anilha',
            'Cadeira Extensora',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Crossover Sentado',
            'Prancha Alternada',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Crunch No Cabo',
          ]),
        }),
      ]),
      'relaxados': list([
        'Supino Com Anilha',
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Stiff Halteres',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Halteres',
            'Canoinha',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Box Jump',
            'Hollow Hold',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Elevação Frontal Anilha',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
  ])
# ---
# name: test_upper_3x2treinos_seed11
  list([
    dict({
      'avisos': list([
        dict({
          'chave': 'remadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 0,
        }),
        dict({
          'chave': 'remadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 1,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Supino Com Halteres',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Puxada Aberta',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Apoio',
            'Pullover Polia',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Crossover',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3)',
    }),
  ])
# ---
